adicao repository